--- a/BDDFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/BDDFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="acaea5">  <td>21/02/08 09:04:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:testRunner.TestRunner@64bf3bbf]">feature</td> 
-  <td>main@1022308509</td>   <td></td> </tr>
-<tr bgcolor="acaea5">  <td>21/02/08 09:04:22</td>   <td>-158</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:testRunner.TestRunner@64bf3bbf]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1022308509</td>   <td></td> </tr>
-<tr bgcolor="acaea5">  <td>21/02/08 09:04:24</td>   <td>2688</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testRunner.TestRunner@64bf3bbf]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1022308509</td>   <td></td> </tr>
+<tr bgcolor="7e8f62">  <td>21/02/09 13:41:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VailfFormPage.i_am_on_the_from_s_page()[pri:0, instance:stepDef.VailfFormPage@56ef9176]">i_am_on_the_from_s_page</td> 
+  <td>main@1846412426</td>   <td></td> </tr>
 </table>
