--- a/BDDFramework/test-output/old/Default suite/classes.html
+++ b/BDDFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>stepDef.VailfFormPage</td>
+<td>stepDef.TextBox</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>i_am_on_the_from_s_page</td>
+<td>i_am_on_the_textbox_page</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
