--- a/BDDFramework/test-output/emailable-report.html
+++ b/BDDFramework/test-output/emailable-report.html
@@ -9,9 +9,9 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">2,572</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">2,650</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">stepDef.VailfFormPage2</td><td><a href="#m0">i_am_on_the_from_s_page</a></td><td rowspan="1">1613090327226</td><td rowspan="1">2537</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">stepDef.VailfFormPage2</td><td><a href="#m0">i_am_on_the_from_s_page</a></td><td rowspan="1">1613092263313</td><td rowspan="1">2611</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">stepDef.VailfFormPage2#i_am_on_the_from_s_page</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: session not created: This version of ChromeDriver only supports Chrome version 86
 Current browser version is 88.0.4324.150 with binary path C:\Program Files (x86)\Google\Chrome\Application\chrome.exe
@@ -19,27 +19,27 @@ Build info: version: &apos;3.141.59&apos;, revision: &apos;e82be7d358&apos;, tim
 System info: host: &apos;DESKTOP-D7C059L&apos;, ip: &apos;192.168.1.19&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;12.0.1&apos;
 Driver info: driver.version: ChromeDriver
 remote stacktrace: Backtrace:
-	Ordinal0 [0x0047C013+3194899]
-	Ordinal0 [0x00366021+2056225]
-	Ordinal0 [0x001FF608+587272]
-	Ordinal0 [0x00181BF3+72691]
-	Ordinal0 [0x0017E229+57897]
-	Ordinal0 [0x0017C64A+50762]
-	Ordinal0 [0x001A1EE9+204521]
-	Ordinal0 [0x001A1D0D+204045]
-	Ordinal0 [0x0019FC1B+195611]
-	Ordinal0 [0x00183B7F+80767]
-	Ordinal0 [0x00184B4E+84814]
-	Ordinal0 [0x00184AD9+84697]
-	Ordinal0 [0x0037CE64+2149988]
-	GetHandleVerifier [0x005EBE95+1400773]
-	GetHandleVerifier [0x005EBB61+1399953]
-	GetHandleVerifier [0x005F31FA+1430314]
-	GetHandleVerifier [0x005EC69F+1402831]
-	Ordinal0 [0x00373D61+2112865]
-	Ordinal0 [0x0037E5CB+2155979]
-	Ordinal0 [0x0037E6F5+2156277]
-	Ordinal0 [0x0038F26E+2224750]
+	Ordinal0 [0x00CAC013+3194899]
+	Ordinal0 [0x00B96021+2056225]
+	Ordinal0 [0x00A2F608+587272]
+	Ordinal0 [0x009B1BF3+72691]
+	Ordinal0 [0x009AE229+57897]
+	Ordinal0 [0x009AC64A+50762]
+	Ordinal0 [0x009D1EE9+204521]
+	Ordinal0 [0x009D1D0D+204045]
+	Ordinal0 [0x009CFC1B+195611]
+	Ordinal0 [0x009B3B7F+80767]
+	Ordinal0 [0x009B4B4E+84814]
+	Ordinal0 [0x009B4AD9+84697]
+	Ordinal0 [0x00BACE64+2149988]
+	GetHandleVerifier [0x00E1BE95+1400773]
+	GetHandleVerifier [0x00E1BB61+1399953]
+	GetHandleVerifier [0x00E231FA+1430314]
+	GetHandleVerifier [0x00E1C69F+1402831]
+	Ordinal0 [0x00BA3D61+2112865]
+	Ordinal0 [0x00BAE5CB+2155979]
+	Ordinal0 [0x00BAE6F5+2156277]
+	Ordinal0 [0x00BBF26E+2224750]
 	BaseThreadInitThunk [0x772E6359+25]
 	RtlGetAppContainerNamedObjectPath [0x77AF8944+228]
 	RtlGetAppContainerNamedObjectPath [0x77AF8914+180]
